Omit invalid values for xmp metadata when saving

Before this commit, if there was an invalid value for xmp exif
metadata, Krita would fail saving to a kra file because the xmp encoder
would complain about it.
This commit just omits encoding the invalid values and warns about it in
logs.

BUG:520982